# rust-test-assignment

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
fixed-price-sale/: Cargo.toml
src/: instruction.rs  lib.rs  processor.rs  state.rs
src/client/: hello_world.ts
src/program-rust/: Cargo.toml
