
[package]
name = "fixed-price-sale"
version = "0.0.1"
description = "This is just a test assignment for job application to SFXDX company"
authors = ["Sergey Monin <maintainers@solana.com>"]
repository = "https://github.com/r007/rust-test-assignment"
license = "Apache-2.0"
homepage = "https://build-in-saratov.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.1.1"
borsh-derive = "1.1.1"
solana-program = "1.17.3"
spl-associated-token-account = "2.2.0"
spl-token = "4.0.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
solana-program-test = "1.17.3"
solana-sdk = "1.17.3"

[lib]
name = "splmarket"
crate-type = ["cdylib", "lib"]
