
[package]
name = "fixed-price-sale"
version = "0.0.1"
description = "This is just a test assignment for job application to SFXDX company"
authors = ["Sergey Monin <maintainers@solana.com>"]
repository = "https://github.com/r007/rust-test-assignment"
license = "Apache-2.0"
homepage = "https://build-in-saratov.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.0"
solana-program = "~1.10.35"

[dev-dependencies]
solana-program-test = "~1.10.35"
solana-sdk = "~1.10.35"

[lib]
name = "splmarket"
crate-type = ["cdylib", "lib"]
