
[package]
name = "rust-test-assignment"
version = "0.0.1"
description = "This is just a test assignment for job application to SFXDX company"
authors = ["Sergey Monin <maintainers@solana.com>"]
repository = "https://github.com/r007/rust-test-assignment"
license = "Apache-2.0"
homepage = "https://build-in-saratov.com/"
edition = "2023"

[features]
no-entrypoint = []

[dependencies]
borsh = "1.1.1"
borsh-derive = "0.10.0"
solana-program = "~1.10.35"

[dev-dependencies]
solana-program-test = "~1.10.35"
solana-sdk = "~1.10.35"

[lib]
name = "rust-solana"
crate-type = ["cdylib", "lib"]
